# avrd

./: .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  regenerate-devices.sh
device_generator/: Cargo.toml
device_generator/src/: main.rs
packs/: LICENSE  README.md
packs/atmega/: AT90CAN128.atdf  AT90CAN32.atdf  AT90CAN64.atdf  AT90PWM1.atdf  AT90PWM161.atdf  AT90PWM216.atdf  AT90PWM2B.atdf  AT90PWM316.atdf  AT90PWM3B.atdf  AT90PWM81.atdf  AT90USB1286.atdf  AT90USB1287.atdf  AT90USB162.atdf  AT90USB646.atdf  AT90USB647.atdf  AT90USB82.atdf  ATmega128.atdf  ATmega1281.atdf  ATmega1284.atdf  ATmega1284P.atdf  ATmega1284RFR2.atdf  ATmega128A.atdf  ATmega128RFA1.atdf  ATmega128RFR2.atdf  ATmega16.atdf  ATmega162.atdf  ATmega164A.atdf  ATmega164P.atdf  ATmega164PA.atdf  ATmega165A.atdf  ATmega165P.atdf  ATmega165PA.atdf  ATmega168.atdf  ATmega168A.atdf  ATmega168P.atdf  ATmega168PA.atdf  ATmega168PB.atdf  ATmega169A.atdf  ATmega169P.atdf  ATmega169PA.atdf  (+83 more)
packs/automotive/: ATA5272.atdf  ATA5505.atdf  ATA5700M322.atdf  ATA5702M322.atdf  ATA5781.atdf  ATA5782.atdf  ATA5783.atdf  ATA5787.atdf  ATA5790.atdf  ATA5790N.atdf  ATA5791.atdf  ATA5795.atdf  ATA5831.atdf  ATA5832.atdf  ATA5833.atdf  ATA5835.atdf  ATA6285.atdf  ATA6286.atdf  ATA6612C.atdf  ATA6613C.atdf  ATA6614Q.atdf  ATA6616C.atdf  ATA6617C.atdf  ATA664251.atdf  ATA8210.atdf  ATA8215.atdf  ATA8510.atdf  ATA8515.atdf
packs/tiny/: ATtiny10.atdf  ATtiny102.atdf  ATtiny104.atdf  ATtiny11.atdf  ATtiny12.atdf  ATtiny13.atdf  ATtiny15.atdf  ATtiny1614.atdf  ATtiny1616.atdf  ATtiny1617.atdf  ATtiny1634.atdf  ATtiny20.atdf  ATtiny24.atdf  ATtiny24A.atdf  ATtiny25.atdf  ATtiny26.atdf  ATtiny261.atdf  ATtiny261A.atdf  ATtiny3214.atdf  ATtiny3216.atdf  ATtiny3217.atdf  ATtiny4.atdf  ATtiny40.atdf  ATtiny417.atdf  ATtiny4313.atdf  ATtiny43U.atdf  ATtiny44.atdf  ATtiny441.atdf  ATtiny44A.atdf  ATtiny45.atdf  ATtiny461.atdf  ATtiny461A.atdf  ATtiny48.atdf  ATtiny5.atdf  ATtiny80.atdf  ATtiny814.atdf  ATtiny816.atdf  ATtiny817.atdf  ATtiny828.atdf  ATtiny84.atdf  (+10 more)
packs/xmegaa/: ATxmega128A1.atdf  ATxmega128A1U.atdf  ATxmega128A3.atdf  ATxmega128A3U.atdf  ATxmega128A4U.atdf  ATxmega16A4.atdf  ATxmega16A4U.atdf  ATxmega192A3.atdf  ATxmega192A3U.atdf  ATxmega256A3.atdf  ATxmega256A3B.atdf  ATxmega256A3BU.atdf  ATxmega256A3U.atdf  ATxmega32A4.atdf  ATxmega32A4U.atdf  ATxmega64A1.atdf  ATxmega64A1U.atdf  (+3 more)
src/: lib.rs
(+25 files in other folders)
