[package]
name = "avrd"
version = "0.2.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = """
Device-specific constants and information for all AVR microcontrollers
"""

license = "MIT"
repository = "https://github.com/avr-rust/avrd"
documentation = "https://docs.rs/avrd"

keywords = ["avr", "mcu", "io", "constants", "pins"]
categories = ["embedded"]

[features]
default = []
# Enable all microcontrollers.
all_mcus = []

[dependencies]

[build-dependencies]
avr-mcu = "0.2"
