[package]
name = "avrd"
version = "0.4.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = """
Device-specific constants and information for all AVR microcontrollers
"""

license = "MIT"
repository = "https://github.com/avr-rust/avrd"
documentation = "https://docs.rs/avrd"

keywords = ["avr", "mcu", "io", "constants", "pins"]
categories = ["embedded"]

[features]
default = [ "all_mcus" ]
# Enable all microcontrollers.
all_mcus = []

[dependencies]

[build-dependencies]
avr-mcu = { git = "https://github.com/Logarithmus/avr-mcu", branch = "master" }

[profile.dev]
# Most of the build consists of generating the mcu description files. So
# enable optimizations to speed this process.
opt-level = 3